# yuroo-shield

./: .commit_msg  .env.example  .gitignore  README.md  pyproject.toml
src/yuroo_shield/: __init__.py  __main__.py  canonical.py  cli.py  config.py  etherscan.py  llm.py  orchestrator.py  web.py
src/yuroo_shield/agents/: __init__.py  contract_scanner.py  goplus_intel.py  report_generator.py  rugpull_monitor.py  threat_intel.py  token_analyzer.py
tests/: test_canonical.py  test_contract_scanner.py  test_goplus_intel.py  test_orchestrator.py  test_report_generator.py  test_threat_intel.py
web/static/: index.html
