[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuroo-shield"
version = "0.1.0"
description = "Multi-agent smart contract security and rugpull detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "king of sadness" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "ruff>=0.4",
]

[project.scripts]
yuroo_shield = "yuroo_shield.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
